company profile side spacing on mobile fixed

--- a/assets/scss/pages/web-responsive.scss
+++ b/assets/scss/pages/web-responsive.scss
@@ -1279,8 +1279,8 @@
     .company-info-col,
     .activity-hours-col,
     .finances-col {
-      padding-left: 2%;
-      padding-right: 2%;
+      padding-left: 15px;
+      padding-right: 15px;
     }
 
     .company-info,
